# scooters_data_generator

./: .gitignore  CHANGELOG.md  README.md  map_test.py  pyproject.toml  requirements.txt  sim_test.py
.github/workflows/: create_release.yml
data/: models.csv
scripts/: analyze_rides.py  compute_routes.py  dump_moscow_geo.py  dump_transport_mos.py  export_rides_geojson.py  normalize_rides.py  plan_simulation.py  plot_city_zone.py  prepare_cad_zone.py  prepare_city_zone.py  prepare_weather.py  run_simulation.py  update_database.py
src/: city_utils.py  data_manager.py  database.py  database_loader.py  geo_utils.py  planner.py  ride_planner.py  ride_simulator.py  transport_mos.py
src/faker_providers/: datetime.py  location.py  parking.py  person.py  scooter.py  weather.py
src/vis/: plot_city.py  plot_city_zone.py  statistics.py
tests/: faker_test.py  geo_test.py  ride_planner_test.py  transport_mos_test.py
